[package]
name = "b32"
version = "0.1.0"
authors = ["Phyrone <phyrone@phyrone.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "b32"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
tracing = { version = "0.1.40", features = ["log-always"] }
esp-idf-svc = { version = "0.49", features = ["critical-section"] }

# Asybchronous runtime
tokio = { version = "1.41.1", features = ["fs", "net", "rt", "sync", "time","io-util", "tracing"] }

# Error handling
anyhow = "1.0.93"
thiserror = "2.0.1"
error-stack = { version = "0.5.0", features = ["std", "anyhow", "backtrace"] }
log = "0.4.22"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is released
