[package]
name = "b32"
version = "0.1.0"
authors = ["Phyrone <phyrone@phyrone.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "b32"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"



[dependencies]
tracing = { optional = true, version = "0.1.4", features = ["log-always"] }
esp-idf-svc = { version = "0.49.1", features = ["critical-section"] }

# Asybchronous runtime
# Tokio
tokio = { optional = true, version = "1.42.0", features = ["fs", "net", "rt", "sync", "time", "io-util", "tracing"] }

# Embassy
embassy-sync = { optional = true, version = "0.6.1", features = [] }

# Error handling
anyhow = "1.0.94"
thiserror = "2.0.6"
error-stack = { version = "0.5.0", features = ["std", "anyhow", "backtrace"] }
log = "0.4.22"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.2.5" # Necessary until a new version of `esp-idf-sys` is released

[features]
default = ["rt-embassy"]

log = ["tracing", "embassy-sync?/log"]

experimental = ["esp-idf-svc/experimental"]
rt-tokio = ["tokio"]
rt-embassy = ["embassy-sync"]